--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,13 +1,24 @@
-name: Frontend CI/CD
+name: Frontend CI/CD - GCP Kubernetes
 
 on:
   push:
     branches:
-      - dev
       - main
+      - dev
+      - 'release/**'
   pull_request:
     branches:
-      - release/*
+      - main
+      - dev
+  workflow_dispatch:
+
+env:
+  PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
+  GAR_LOCATION: us-central1
+  CLUSTER_NAME: ${{ secrets.GKE_CLUSTER_NAME }}
+  GKE_ZONE: ${{ secrets.GKE_ZONE }}
+  DEPLOYMENT_NAME: app-presente-front
+  DOCKER_IMAGE: guilherme310402/app_presente_front
 
 jobs:
   test:
@@ -15,158 +26,141 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-      - name: Install dependencies
-        run: npm ci
-      - name: Run linting
-        run: npm run lint
-      - name: Run tests
-        run: npm test
-      - name: Archive test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-results
-          path: |
-            **/test-results/**
-            **/*.xml
-  build:
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.event_name == 'pull_request' && startsWith(github.ref, 'refs/heads/release/')
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-      - name: Install dependencies
-        run: npm ci
-      - name: Build frontend
-        env:
-          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
-        run: npm run build
-      - name: Build and push Docker image
-        run: |
-          docker build --no-cache -t guilherme310402/app_presente_front:${GITHUB_SHA::7} .
-          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-          docker push guilherme310402/app_presente_front:${GITHUB_SHA::7}
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Archive build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-output
-          path: |
-            .next/
-            out/
-      - name: Notify on release
-        uses: slackapi/slack-github-action@v1.24.0
-        with:
-          slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }}
-          channel-id: 'YOUR_SLACK_CHANNEL_ID' # Replace with actual Slack channel ID
-          text: "New release version built: ${{ github.sha }} for app_presente_front"
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
-  deploy-stage:
-    runs-on: ubuntu-latest
-    needs: test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/dev'
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: 'npm'
+
       - name: Install dependencies
+        working-directory: ./
         run: npm ci
-      - name: Build frontend
-        env:
-          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
-        run: npm run build
-      - name: Build and push Docker image
-        run: |
-          docker build --no-cache -t guilherme310402/app_presente_front:latest .
-          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-          docker push guilherme310402/app_presente_front:latest
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Authenticate to Google Cloud
-        uses: google-github-actions/auth@v2
-        with:
-          credentials_json: '${{ secrets.GOOGLE_CLOUD_KEYS }}'
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-      - name: Install gke-gcloud-auth-plugin
-        run: |
-          gcloud components install gke-gcloud-auth-plugin --quiet || { echo "Plugin installation failed"; exit 1; }
-          gcloud components update --quiet
-          which gke-gcloud-auth-plugin || { echo "Plugin not found"; exit 1; }
-      - name: Configure kubectl
-        run: |
-          gcloud container clusters get-credentials devops-cluster --region us-central1 --project app-chamada-5706
-      - name: Deploy to stage
-        run: |
-          kubectl -n stage-app-presente apply -f k8s/stage/frontend-deployment.yaml -f k8s/stage/frontend-service.yaml
-          kubectl set image deployment/app-presente-front -n stage-app-presente app-presente-front=guilherme310402/app_presente_front:latest
-          kubectl patch deployment app-presente-front -n stage-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
-          kubectl rollout restart deployment/app-presente-front -n stage-app-presente
-          kubectl rollout status deployment/app-presente-front -n stage-app-presente --timeout=120s
-  deploy-production:
+
+      - name: Run linting
+        working-directory: ./
+        run: npm run lint
+
+      - name: Run tests
+        working-directory: ./
+        run: npm test
+
+  build:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/heads/release/')
     runs-on: ubuntu-latest
     needs: test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: 'npm'
+
       - name: Install dependencies
+        working-directory: ./
         run: npm ci
-      - name: Build frontend
-        env:
-          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
-        run: npm run build
+
       - name: Build and push Docker image
         run: |
-          docker build --no-cache -t guilherme310402/app_presente_front:latest .
+          COMMIT_SHA=${{ github.sha }}
+          docker build --no-cache -t guilherme310402/app_presente_front:$COMMIT_SHA .
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-          docker push guilherme310402/app_presente_front:latest
+          docker push guilherme310402/app_presente_front:$COMMIT_SHA
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Authenticate to Google Cloud
+
+  deploy:
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/heads/release/')
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - id: commit
+        run: echo "SHORT_SHA=$(git rev-parse --short=7 HEAD)" >> $GITHUB_OUTPUT
+
+      - id: 'auth'
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: '${{ secrets.GOOGLE_CLOUD_KEYS }}'
-      - name: Set up Google Cloud SDK
+          credentials_json: ${{ secrets.GOOGLE_CLOUD_KEYS }}
+          project_id: app-chamada-5706
+
+      - name: Set up Cloud SDK and kubectl
         uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: app-chamada-5706
+          install_components: 'kubectl'
+
       - name: Install gke-gcloud-auth-plugin
         run: |
-          gcloud components install gke-gcloud-auth-plugin --quiet || { echo "Plugin installation failed"; exit 1; }
-          gcloud components update --quiet
-          which gke-gcloud-auth-plugin || { echo "Plugin not found"; exit 1; }
+          sudo curl -Lo /usr/local/bin/gke-gcloud-auth-plugin \
+            https://storage.googleapis.com/gke-release/gke-gcloud-auth-plugin/linux/amd64/gke-gcloud-auth-plugin
+          sudo chmod +x /usr/local/bin/gke-gcloud-auth-plugin
+          echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
+
       - name: Configure kubectl
         run: |
-          gcloud container clusters get-credentials devops-cluster --region us-central1 --project app-chamada-5706
-      - name: Deploy to production
+          gcloud container clusters get-credentials stage-app-presente \
+            --region us-east1 \
+            --project app-chamada-5706
+
+      - name: Set environment variables
         run: |
-          kubectl -n production-app-presente apply -f k8s/production/frontend-deployment.yaml -f k8s/production/frontend-service.yaml
-          kubectl set image deployment/app-presente-front -n production-app-presente app-presente-front=guilherme310402/app_presente_front:latest
-          kubectl patch deployment app-presente-front -n production-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
-          kubectl rollout restart deployment/app-presente-front -n production-app-presente
-          kubectl rollout status deployment/app-presente-front -n production-app-presente --timeout=120s
+          if [[ "${GITHUB_REF##*/}" == "main" ]]; then
+            echo "NAMESPACE=production-app-presente" >> $GITHUB_ENV
+          else
+            echo "NAMESPACE=stage-app-presente" >> $GITHUB_ENV
+          fi
+
+      - name: Generate and apply Kubernetes manifests (Service + Deployment)
+        run: |
+          export NAMESPACE=${{ env.NAMESPACE }}
+
+          envsubst < k8s/stage/frontend-service.template.yaml > frontend-service.yaml
+          envsubst < k8s/stage/frontend-deployment.template.yaml > frontend-deployment.yaml
+
+          echo "=== frontend-service.yaml ==="
+          cat frontend-service.yaml
+          echo "=== frontend-deployment.yaml ==="
+          cat frontend-deployment.yaml
+
+          kubectl apply -f frontend-service.yaml
+          kubectl apply -f frontend-deployment.yaml
+
+      - name: Deploy to Kubernetes
+        run: |
+          COMMIT_SHA=${{ github.sha }}
+          kubectl set image deployment/app-presente-front -n $NAMESPACE \
+            app-presente-front=guilherme310402/app_presente_front:$COMMIT_SHA \
+            --record
+          kubectl rollout status deployment/app-presente-front \
+            -n $NAMESPACE --timeout=120s
+
+  release-notification:
+    if: startsWith(github.ref, 'refs/heads/release/')
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Send email notification
+        uses: dawidd6/action-send-mail@v3
+        with:
+          server_address: smtp.gmail.com
+          server_port: 587
+          username: saler.scl@gmail.com
+          password: ${{ secrets.EMAIL_PASS }}
+          subject: "🚀 Nova versão em pré-produção disponível (Frontend)"
+          to: saler.cez@gmail.com
+          from: "Presente CI/CD <saler.scl@gmail.com>"
+          html_body: |
+            <h2>Nova versão em pré-produção (Frontend)</h2>
+            <p>Uma nova imagem foi construída e enviada para o Docker Hub com base no branch <strong>${{ github.ref_name }}</strong>.</p>
+            <p><strong>Imagem:</strong> guilherme310402/app_presente_front:$COMMIT_SHA</p>
+            <hr/>
+            <p>Workflow: <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}">Ver execução</a></p>
