Rename frontend YAMLs to template files and add NAMESPACE placeholder

--- a/k8s/production/frontend-deployment.yaml
+++ b/k8s/production/frontend-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app-presente-front
-  namespace: stage-app-presente
+  namespace: ${NAMESPACE}
   labels:
     app: app-presente-front
 spec:
