--- a/k8s/production/frontend-service.yaml
+++ b/k8s/production/frontend-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: app-presente-front
-  namespace: stage-app-presente
+  namespace: ${NAMESPACE}
 spec:
   selector:
     app: app-presente-front
@@ -10,4 +10,4 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 3000
-  type: LoadBalancer
+  type: ClusterIP
