--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,21 +26,17 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: 'npm'
-
       - name: Install dependencies
         working-directory: ./
         run: npm ci
-
       - name: Run linting
         working-directory: ./
         run: npm run lint
-
       - name: Run tests
         working-directory: ./
         run: npm test
@@ -54,37 +50,34 @@ jobs:
             **/*.xml
 
   build:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/heads/release/')
     runs-on: ubuntu-latest
     needs: test
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' || startsWith(github.ref, 'refs/heads/release/'))
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: 'npm'
-
       - name: Install dependencies
         working-directory: ./
         run: npm ci
-
+      - name: Build frontend
+        env:
+          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
+        run: npm run build
       - name: Build and push Docker image
         run: |
-          COMMIT_SHA=${{ github.sha }}
-          docker build --no-cache \
-            -t guilherme310402/app_presente_front:$COMMIT_SHA \
-            -t guilherme310402/app_presente_front:latest .
-          COMMIT_SHA=${{ github.sha }}
+          COMMIT_SHA=$(echo ${{ github.sha }} | cut -c1-7)
+          echo "COMMIT_SHA=$COMMIT_SHA" >> $GITHUB_ENV
           docker build --no-cache \
             -t guilherme310402/app_presente_front:$COMMIT_SHA \
             -t guilherme310402/app_presente_front:latest .
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-          docker push guilherme310402/app_presente_front:$COMMIT_SHA
-          docker push guilherme310402/app_presente_front:$COMMIT_SHA
+          docker push guilherme310402/app_presente_front:$COMMIT_SHA || { echo "Failed to push Docker image with COMMIT_SHA"; exit 1; }
+          docker push guilherme310402/app_presente_front:latest || { echo "Failed to push Docker image with latest tag"; exit 1; }
         env:
           DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
@@ -103,119 +96,86 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          node-version: '18'
-          cache: 'npm'
-      - name: Install dependencies
-        run: npm ci
-      - name: Build frontend
-        env:
-          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
-        run: npm run build
-      - name: Build and push Docker image
-        run: |
-          COMMIT_SHA=${{ github.sha }}
-          docker build --no-cache -t guilherme310402/app_presente_front:$COMMIT_SHA .
-          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-          docker push guilherme310402/app_presente_front:$COMMIT_SHA
-          docker push guilherme310402/app_presente_front:latest
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
-          credentials_json: ${{ secrets.GOOGLE_CLOUD_KEYS }}
+          credentials_json: '${{ secrets.GOOGLE_CLOUD_KEYS }}'
           project_id: app-chamada-5706
-
       - name: Set up Cloud SDK and kubectl
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: app-chamada-5706
           install_components: 'kubectl'
-
       - name: Install gke-gcloud-auth-plugin
         run: |
           sudo curl -Lo /usr/local/bin/gke-gcloud-auth-plugin \
             https://storage.googleapis.com/gke-release/gke-gcloud-auth-plugin/linux/amd64/gke-gcloud-auth-plugin
           sudo chmod +x /usr/local/bin/gke-gcloud-auth-plugin
           echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
-
       - name: Configure kubectl
         run: |
           gcloud container clusters get-credentials stage-app-presente \
             --region us-east1 \
             --project app-chamada-5706
-
-      - name: Set environment variables
+      - name: Deploy to stage
         run: |
-          if [[ "${GITHUB_REF##*/}" == "main" ]]; then
-            echo "NAMESPACE=production-app-presente" >> $GITHUB_ENV
-          else
-            echo "NAMESPACE=stage-app-presente" >> $GITHUB_ENV
+          # Check if files exist
+          if [ ! -f "k8s/stage/frontend-deployment.yaml" ]; then
+            echo "Error: k8s/stage/frontend-deployment.yaml not found"
+            exit 1
+          fi
+          if [ ! -f "k8s/stage/frontend-service.yaml" ]; then
+            echo "Error: k8s/stage/frontend-service.yaml not found"
+            exit 1
           fi
 
-      - name: Generate and apply Kubernetes manifests (Service + Deployment)
-        run: |
-          export NAMESPACE=${{ env.NAMESPACE }}
-
-          envsubst < k8s/stage/frontend-service.template.yaml > frontend-service.yaml
-          envsubst < k8s/stage/frontend-deployment.template.yaml > frontend-deployment.yaml
-
-          echo "=== frontend-service.yaml ==="
-          cat frontend-service.yaml
-          echo "=== frontend-deployment.yaml ==="
-          cat frontend-deployment.yaml
-
+          COMMIT_SHA=${{ env.COMMIT_SHA }}
           kubectl apply -f k8s/stage/frontend-deployment.yaml -n stage-app-presente
           kubectl apply -f k8s/stage/frontend-service.yaml -n stage-app-presente
           kubectl set image deployment/app-presente-front -n stage-app-presente app-presente-front=guilherme310402/app_presente_front:$COMMIT_SHA
-          kubectl patch deployment app-presente-front -n stage-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
+          kubectl patch deployment/app-presente-front -n stage-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
           kubectl rollout restart deployment/app-presente-front -n stage-app-presente
-          kubectl rollout status deployment/app-presente-front -n stage-app-presente --timeout=120s
+
+          # Debug: Check pod status
+          echo "Checking pod status..."
+          kubectl get pods -n stage-app-presente
+
+          # Debug: Describe the deployment
+          echo "Describing deployment..."
+          kubectl describe deployment app-presente-front -n stage-app-presente
+
+          # Wait for rollout with increased timeout
+          echo "Waiting for rollout to complete..."
+          kubectl rollout status deployment/app-presente-front -n stage-app-presente --timeout=300s
 
   deploy-production:
     runs-on: ubuntu-latest
     needs: build
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
-      - name: Send email notification
-        uses: dawidd6/action-send-mail@v3
-        with:
-          node-version: '18'
-          cache: 'npm'
-      - name: Install dependencies
-        run: npm ci
-      - name: Build frontend
-        env:
-          NEXT_PUBLIC_API_URL: ${{ secrets.NEXT_PUBLIC_API_URL }}
-        run: npm run build
-      - name: Build and push Docker image
-        run: |
-          COMMIT_SHA=${{ github.sha }}
-          docker build --no-cache \
-            -t guilherme310402/app_presente_front:$COMMIT_SHA \
-            -t guilherme310402/app_presente_front:latest .
-          echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-          docker push guilherme310402/app_presente_front:$COMMIT_SHA
-          docker push guilherme310402/app_presente_front:latest
-        env:
-          DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-          DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
           credentials_json: '${{ secrets.GOOGLE_CLOUD_KEYS }}'
-      - name: Set up Google Cloud SDK
+          project_id: app-chamada-5706
+      - name: Set up Cloud SDK and kubectl
         uses: google-github-actions/setup-gcloud@v2
+        with:
+          project_id: app-chamada-5706
+          install_components: 'kubectl'
       - name: Install gke-gcloud-auth-plugin
         run: |
-          gcloud components install gke-gcloud-auth-plugin --quiet || { echo "Plugin installation failed"; exit 1; }
-          gcloud components update --quiet
-          which gke-gcloud-auth-plugin || { echo "Plugin not found"; exit 1; }
+          sudo curl -Lo /usr/local/bin/gke-gcloud-auth-plugin \
+            https://storage.googleapis.com/gke-release/gke-gcloud-auth-plugin/linux/amd64/gke-gcloud-auth-plugin
+          sudo chmod +x /usr/local/bin/gke-gcloud-auth-plugin
+          echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
       - name: Configure kubectl
         run: |
-          gcloud container clusters get-credentials devops-cluster --region us-central1 --project app-chamada-5706
+          gcloud container clusters get-credentials devops-cluster \
+            --region us-central1 \
+            --project app-chamada-5706
       - name: Deploy to production
         run: |
           # Check if files exist
@@ -228,12 +188,24 @@ jobs:
             exit 1
           fi
 
+          COMMIT_SHA=${{ env.COMMIT_SHA }}
           kubectl apply -f k8s/production/frontend-deployment.yaml -n production-app-presente
           kubectl apply -f k8s/production/frontend-service.yaml -n production-app-presente
           kubectl set image deployment/app-presente-front -n production-app-presente app-presente-front=guilherme310402/app_presente_front:$COMMIT_SHA
-          kubectl patch deployment app-presente-front -n production-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
+          kubectl patch deployment/app-presente-front -n production-app-presente -p '{"spec":{"template":{"spec":{"nodeSelector":{"kubernetes.io/arch":"amd64"}}}}}'
           kubectl rollout restart deployment/app-presente-front -n production-app-presente
-          kubectl rollout status deployment/app-presente-front -n production-app-presente --timeout=120s
+
+          # Debug: Check pod status
+          echo "Checking pod status..."
+          kubectl get pods -n production-app-presente
+
+          # Debug: Describe the deployment
+          echo "Describing deployment..."
+          kubectl describe deployment app-presente-front -n production-app-presente
+
+          # Wait for rollout with increased timeout
+          echo "Waiting for rollout to complete..."
+          kubectl rollout status deployment/app-presente-front -n production-app-presente --timeout=300s
 
   release-notification:
     if: startsWith(github.ref, 'refs/heads/release/')
@@ -247,12 +219,12 @@ jobs:
           server_port: 587
           username: saler.scl@gmail.com
           password: ${{ secrets.EMAIL_PASS }}
-          subject: "🚀 Nova versão em pré-produção disponível (Frontend-stage)"
+          subject: "🚀 Nova versão em pré-produção disponível (Frontend)"
           to: saler.cez@gmail.com
           from: "Presente CI/CD <saler.scl@gmail.com>"
           html_body: |
             <h2>Nova versão em pré-produção (Frontend)</h2>
             <p>Uma nova imagem foi construída e enviada para o Docker Hub com base no branch <strong>${{ github.ref_name }}</strong>.</p>
-            <p><strong>Imagem:</strong> guilherme310402/app_presente_front:$COMMIT_SHA</p>
+            <p><strong>Imagem:</strong> guilherme310402/app_presente_front:${{ env.COMMIT_SHA }}</p>
             <hr/>
             <p>Workflow: <a href="${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}">Ver execução</a></p>
