--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -113,10 +113,16 @@ jobs:
           sudo chmod +x /usr/local/bin/gke-gcloud-auth-plugin
           echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
       - name: Configure kubectl
-        run: |
-          gcloud container clusters get-credentials stage-app-presente \
-            --region us-east1 \
-            --project app-chamada-5706
+          run: |
+            if [[ "${GITHUB_REF##*/}" == "main" ]]; then
+              gcloud container clusters get-credentials devops-cluster \
+                --region us-central1 \
+                --project app-chamada-5706
+            else
+              gcloud container clusters get-credentials stage-app-presente \
+                --region us-east1 \
+                --project app-chamada-5706
+            fi
       - name: Deploy to stage
         run: |
           # Check if files exist
@@ -199,10 +205,16 @@ jobs:
           sudo chmod +x /usr/local/bin/gke-gcloud-auth-plugin
           echo "USE_GKE_GCLOUD_AUTH_PLUGIN=True" >> $GITHUB_ENV
       - name: Configure kubectl
-        run: |
-          gcloud container clusters get-credentials devops-cluster \
-            --region us-central1 \
-            --project app-chamada-5706
+          run: |
+            if [[ "${GITHUB_REF##*/}" == "main" ]]; then
+              gcloud container clusters get-credentials devops-cluster \
+                --region us-central1 \
+                --project app-chamada-5706
+            else
+              gcloud container clusters get-credentials stage-app-presente \
+                --region us-east1 \
+                --project app-chamada-5706
+            fi
       - name: Deploy to production
         run: |
           # Check if files exist
